src/DIVParser.ts
// Generated from antlr/DIVParser.g4 by ANTLR 4.7.3-SNAPSHOT


import { ATN } from "antlr4ts/atn/ATN";
import { ATNDeserializer } from "antlr4ts/atn/ATNDeserializer";
import { FailedPredicateException } from "antlr4ts/FailedPredicateException";
import { NotNull } from "antlr4ts/Decorators";
import { NoViableAltException } from "antlr4ts/NoViableAltException";
import { Override } from "antlr4ts/Decorators";
import { Parser } from "antlr4ts/Parser";
import { ParserRuleContext } from "antlr4ts/ParserRuleContext";
import { ParserATNSimulator } from "antlr4ts/atn/ParserATNSimulator";
import { ParseTreeListener } from "antlr4ts/tree/ParseTreeListener";
import { ParseTreeVisitor } from "antlr4ts/tree/ParseTreeVisitor";
import { RecognitionException } from "antlr4ts/RecognitionException";
import { RuleContext } from "antlr4ts/RuleContext";
//import { RuleVersion } from "antlr4ts/RuleVersion";
import { TerminalNode } from "antlr4ts/tree/TerminalNode";
import { Token } from "antlr4ts/Token";
import { TokenStream } from "antlr4ts/TokenStream";
import { Vocabulary } from "antlr4ts/Vocabulary";
import { VocabularyImpl } from "antlr4ts/VocabularyImpl";

import * as Utils from "antlr4ts/misc/Utils";

import { DIVParserListener } from "./DIVParserListener";
import { DIVParserVisitor } from "./DIVParserVisitor";


export class DIVParser extends Parser {
	public static readonly PROGRAM = 1;
	public static readonly CONST = 2;
	public static readonly GLOBAL = 3;
	public static readonly LOCAL = 4;
	public static readonly BEGIN = 5;
	public static readonly END = 6;
	public static readonly PROCESS = 7;
	public static readonly PRIVATE = 8;
	public static readonly STRUCT = 9;
	public static readonly IMPORT = 10;
	public static readonly SETUP_PROGRAM = 11;
	public static readonly STRING = 12;
	public static readonly BYTE = 13;
	public static readonly WORD = 14;
	public static readonly INT = 15;
	public static readonly COMPILER_OPTIONS = 16;
	public static readonly FUNCTION = 17;
	public static readonly UNTIL = 18;
	public static readonly ELSE = 19;
	public static readonly RETURN = 20;
	public static readonly FROM = 21;
	public static readonly TO = 22;
	public static readonly STEP = 23;
	public static readonly IF = 24;
	public static readonly LOOP = 25;
	public static readonly WHILE = 26;
	public static readonly REPEAT = 27;
	public static readonly FOR = 28;
	public static readonly SWITCH = 29;
	public static readonly CASE = 30;
	public static readonly DEFAULT = 31;
	public static readonly FRAME = 32;
	public static readonly BREAK = 33;
	public static readonly CONTINUE = 34;
	public static readonly CLONE = 35;
	public static readonly DEBUG = 36;
	public static readonly SEMICOLON = 37;
	public static readonly COMMA = 38;
	public static readonly LBRACKET = 39;
	public static readonly RBRACKET = 40;
	public static readonly ASSIGN = 41;
	public static readonly DUP = 42;
	public static readonly LPAREN = 43;
	public static readonly RPAREN = 44;
	public static readonly RSHIFT = 45;
	public static readonly LSHIFT = 46;
	public static readonly OR = 47;
	public static readonly XOR = 48;
	public static readonly AND = 49;
	public static readonly HAT = 50;
	public static readonly AMP = 51;
	public static readonly NEG = 52;
	public static readonly POINTER = 53;
	public static readonly OFFSET = 54;
	public static readonly NOT = 55;
	public static readonly ADD = 56;
	public static readonly SUB = 57;
	public static readonly MUL = 58;
	public static readonly DIV = 59;
	public static readonly MOD = 60;
	public static readonly INC = 61;
	public static readonly DEC = 62;
	public static readonly EQ = 63;
	public static readonly NE = 64;
	public static readonly GT = 65;
	public static readonly LT = 66;
	public static readonly LE = 67;
	public static readonly GE = 68;
	public static readonly SIZEOF = 69;
	public static readonly TYPE = 70;
	public static readonly ID = 71;
	public static readonly DOT = 72;
	public static readonly RANGE = 73;
	public static readonly ADDASSIG = 74;
	public static readonly SUBASSIG = 75;
	public static readonly MULASSIG = 76;
	public static readonly DIVASSIG = 77;
	public static readonly MODASSIG = 78;
	public static readonly ANDASSIG = 79;
	public static readonly ORASSIG = 80;
	public static readonly XORASSIG = 81;
	public static readonly SHRASSIG = 82;
	public static readonly SHLASSIG = 83;
	public static readonly Number = 84;
	public static readonly StringLiteral = 85;
	public static readonly Identifier = 86;
	public static readonly CommentStart = 87;
	public static readonly LINE_COMMENT = 88;
	public static readonly WS = 89;
	public static readonly CommentNest = 90;
	public static readonly CommentEnd = 91;
	public static readonly Anything = 92;
	public static readonly RULE_file = 0;
	public static readonly RULE_compilerOptions = 1;
	public static readonly RULE_declProgram = 2;
	public static readonly RULE_declImport = 3;
	public static readonly RULE_declConst = 4;
	public static readonly RULE_declGlobal = 5;
	public static readonly RULE_declLocal = 6;
	public static readonly RULE_declPrivate = 7;
	public static readonly RULE_declVariable = 8;
	public static readonly RULE_arraySizeDecl = 9;
	public static readonly RULE_stringVarDecl = 10;
	public static readonly RULE_varDecl = 11;
	public static readonly RULE_pointerDecl = 12;
	public static readonly RULE_initArray = 13;
	public static readonly RULE_initElemArray = 14;
	public static readonly RULE_structBody = 15;
	public static readonly RULE_declProcess = 16;
	public static readonly RULE_body = 17;
	public static readonly RULE_statement = 18;
	public static readonly RULE_returnSt = 19;
	public static readonly RULE_ifSt = 20;
	public static readonly RULE_loopSt = 21;
	public static readonly RULE_whileSt = 22;
	public static readonly RULE_repeatSt = 23;
	public static readonly RULE_fromSt = 24;
	public static readonly RULE_forSt = 25;
	public static readonly RULE_switchSt = 26;
	public static readonly RULE_frameSt = 27;
	public static readonly RULE_debugSt = 28;
	public static readonly RULE_breakSt = 29;
	public static readonly RULE_continueSt = 30;
	public static readonly RULE_cloneSt = 31;
	public static readonly RULE_sc = 32;
	public static readonly RULE_condition = 33;
	public static readonly RULE_constant = 34;
	public static readonly RULE_exp = 35;
	public static readonly RULE_eAssign = 36;
	public static readonly RULE_assignOp = 37;
	public static readonly RULE_eLogic = 38;
	public static readonly RULE_logicOp = 39;
	public static readonly RULE_eCompar = 40;
	public static readonly RULE_comparOp = 41;
	public static readonly RULE_eShift = 42;
	public static readonly RULE_eAdd = 43;
	public static readonly RULE_eMul = 44;
	public static readonly RULE_eUnary = 45;
	public static readonly RULE_eDot = 46;
	public static readonly RULE_ePostUnary = 47;
	public static readonly RULE_eAtom = 48;
	public static readonly RULE_structAtom = 49;
	public static readonly RULE_pointerSuffix = 50;
	public static readonly RULE_parameter = 51;
	// tslint:disable:no-trailing-whitespace
	public static readonly ruleNames: string[] = [
		"file", "compilerOptions", "declProgram", "declImport", "declConst", "declGlobal", 
		"declLocal", "declPrivate", "declVariable", "arraySizeDecl", "stringVarDecl", 
		"varDecl", "pointerDecl", "initArray", "initElemArray", "structBody", 
		"declProcess", "body", "statement", "returnSt", "ifSt", "loopSt", "whileSt", 
		"repeatSt", "fromSt", "forSt", "switchSt", "frameSt", "debugSt", "breakSt", 
		"continueSt", "cloneSt", "sc", "condition", "constant", "exp", "eAssign", 
		"assignOp", "eLogic", "logicOp", "eCompar", "comparOp", "eShift", "eAdd", 
		"eMul", "eUnary", "eDot", "ePostUnary", "eAtom", "structAtom", "pointerSuffix", 
		"parameter",
	];

	private static readonly _LITERAL_NAMES: Array<string | undefined> = [
		undefined, undefined, undefined, undefined, undefined, undefined, undefined, 
		undefined, undefined, undefined, undefined, undefined, undefined, undefined, 
		undefined, undefined, undefined, undefined, undefined, undefined, undefined, 
		undefined, undefined, undefined, undefined, undefined, undefined, undefined, 
		undefined, undefined, undefined, undefined, undefined, undefined, undefined, 
		undefined, undefined, undefined, "','", "'['", "']'", undefined, undefined, 
		"'('", "')'", "'>>'", "'<<'", undefined, undefined, undefined, "'^'", 
		"'&'", undefined, undefined, undefined, undefined, "'+'", "'-'", "'*'", 
		"'/'", undefined, "'++'", "'--'", undefined, undefined, undefined, undefined, 
		undefined, undefined, undefined, undefined, undefined, undefined, "'..'", 
		"'+='", "'-='", "'*='", "'/='", "'%='", "'&='", "'|='", "'^='", "'>>='", 
		"'<<='", undefined, undefined, undefined, undefined, undefined, undefined, 
		undefined, "'*/'",
	];
	private static readonly _SYMBOLIC_NAMES: Array<string | undefined> = [
		undefined, "PROGRAM", "CONST", "GLOBAL", "LOCAL", "BEGIN", "END", "PROCESS", 
		"PRIVATE", "STRUCT", "IMPORT", "SETUP_PROGRAM", "STRING", "BYTE", "WORD", 
		"INT", "COMPILER_OPTIONS", "FUNCTION", "UNTIL", "ELSE", "RETURN", "FROM", 
		"TO", "STEP", "IF", "LOOP", "WHILE", "REPEAT", "FOR", "SWITCH", "CASE", 
		"DEFAULT", "FRAME", "BREAK", "CONTINUE", "CLONE", "DEBUG", "SEMICOLON", 
		"COMMA", "LBRACKET", "RBRACKET", "ASSIGN", "DUP", "LPAREN", "RPAREN", 
		"RSHIFT", "LSHIFT", "OR", "XOR", "AND", "HAT", "AMP", "NEG", "POINTER", 
		"OFFSET", "NOT", "ADD", "SUB", "MUL", "DIV", "MOD", "INC", "DEC", "EQ", 
		"NE", "GT", "LT", "LE", "GE", "SIZEOF", "TYPE", "ID", "DOT", "RANGE", 
		"ADDASSIG", "SUBASSIG", "MULASSIG", "DIVASSIG", "MODASSIG", "ANDASSIG", 
		"ORASSIG", "XORASSIG", "SHRASSIG", "SHLASSIG", "Number", "StringLiteral", 
		"Identifier", "CommentStart", "LINE_COMMENT", "WS", "CommentNest", "CommentEnd", 
		"Anything",
	];
	public static readonly VOCABULARY: Vocabulary = new VocabularyImpl(DIVParser._LITERAL_NAMES, DIVParser._SYMBOLIC_NAMES, []);

	// @Override
	// @NotNull
	public get vocabulary(): Vocabulary {
		return DIVParser.VOCABULARY;
	}
	// tslint:enable:no-trailing-whitespace

	// @Override
	public get grammarFileName(): string { return "DIVParser.g4"; }

	// @Override
	public get ruleNames(): string[] { return DIVParser.ruleNames; }

	// @Override
	public get serializedATN(): string { return DIVParser._serializedATN; }

	constructor(input: TokenStream) {
		super(input);
		this._interp = new ParserATNSimulator(DIVParser._ATN, this);
	}
	// @RuleVersion(0)
	public file(): FileContext {
		let _localctx: FileContext = new FileContext(this._ctx, this.state);
		this.enterRule(_localctx, 0, DIVParser.RULE_file);
		let _la: number;
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 105;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			if (_la === DIVParser.COMPILER_OPTIONS) {
				{
				this.state = 104;
				this.compilerOptions();
				}
			}

			this.state = 107;
			this.declProgram();
			this.state = 111;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			while (_la === DIVParser.IMPORT) {
				{
				{
				this.state = 108;
				this.declImport();
				}
				}
				this.state = 113;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
			}
			this.state = 115;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			if (_la === DIVParser.CONST) {
				{
				this.state = 114;
				this.declConst();
				}
			}

			this.state = 118;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			if (_la === DIVParser.GLOBAL) {
				{
				this.state = 117;
				this.declGlobal();
				}
			}

			this.state = 121;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			if (_la === DIVParser.LOCAL) {
				{
				this.state = 120;
				this.declLocal();
				}
			}

			this.state = 124;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			if (_la === DIVParser.PRIVATE) {
				{
				this.state = 123;
				this.declPrivate();
				}
			}

			this.state = 126;
			this.body();
			this.state = 130;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			while (_la === DIVParser.PROCESS || _la === DIVParser.FUNCTION) {
				{
				{
				this.state = 127;
				this.declProcess();
				}
				}
				this.state = 132;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
			}
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public compilerOptions(): CompilerOptionsContext {
		let _localctx: CompilerOptionsContext = new CompilerOptionsContext(this._ctx, this.state);
		this.enterRule(_localctx, 2, DIVParser.RULE_compilerOptions);
		let _la: number;
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 133;
			this.match(DIVParser.COMPILER_OPTIONS);
			this.state = 140;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			while (_la === DIVParser.COMMA || _la === DIVParser.Identifier) {
				{
				this.state = 138;
				this._errHandler.sync(this);
				switch (this._input.LA(1)) {
				case DIVParser.COMMA:
					{
					this.state = 134;
					this.match(DIVParser.COMMA);
					}
					break;
				case DIVParser.Identifier:
					{
					this.state = 135;
					this.match(DIVParser.Identifier);
					{
					this.state = 136;
					this.match(DIVParser.ASSIGN);
					this.state = 137;
					this.constant();
					}
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				}
				this.state = 142;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
			}
			this.state = 143;
			this.match(DIVParser.SEMICOLON);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public declProgram(): DeclProgramContext {
		let _localctx: DeclProgramContext = new DeclProgramContext(this._ctx, this.state);
		this.enterRule(_localctx, 4, DIVParser.RULE_declProgram);
		let _la: number;
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 145;
			_la = this._input.LA(1);
			if (!(_la === DIVParser.PROGRAM || _la === DIVParser.SETUP_PROGRAM)) {
			this._errHandler.recoverInline(this);
			} else {
				if (this._input.LA(1) === Token.EOF) {
					this.matchedEOF = true;
				}

				this._errHandler.reportMatch(this);
				this.consume();
			}
			this.state = 146;
			this.match(DIVParser.Identifier);
			this.state = 147;
			this.sc();
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public declImport(): DeclImportContext {
		let _localctx: DeclImportContext = new DeclImportContext(this._ctx, this.state);
		this.enterRule(_localctx, 6, DIVParser.RULE_declImport);
		let _la: number;
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 149;
			this.match(DIVParser.IMPORT);
			this.state = 150;
			_la = this._input.LA(1);
			if (!(_la === DIVParser.StringLiteral || _la === DIVParser.Identifier)) {
			this._errHandler.recoverInline(this);
			} else {
				if (this._input.LA(1) === Token.EOF) {
					this.matchedEOF = true;
				}

				this._errHandler.reportMatch(this);
				this.consume();
			}
			this.state = 151;
			this.match(DIVParser.SEMICOLON);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public declConst(): DeclConstContext {
		let _localctx: DeclConstContext = new DeclConstContext(this._ctx, this.state);
		this.enterRule(_localctx, 8, DIVParser.RULE_declConst);
		let _la: number;
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 153;
			this.match(DIVParser.CONST);
			this.state = 157;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			while (_la === DIVParser.SEMICOLON) {
				{
				{
				this.state = 154;
				this.match(DIVParser.SEMICOLON);
				}
				}
				this.state = 159;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
			}
			this.state = 171;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			while (_la === DIVParser.Identifier) {
				{
				{
				this.state = 160;
				this.match(DIVParser.Identifier);
				{
				this.state = 161;
				this.match(DIVParser.ASSIGN);
				}
				this.state = 162;
				this.constant();
				this.state = 166;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
				while (_la === DIVParser.SEMICOLON || _la === DIVParser.COMMA) {
					{
					{
					this.state = 163;
					_la = this._input.LA(1);
					if (!(_la === DIVParser.SEMICOLON || _la === DIVParser.COMMA)) {
					this._errHandler.recoverInline(this);
					} else {
						if (this._input.LA(1) === Token.EOF) {
							this.matchedEOF = true;
						}

						this._errHandler.reportMatch(this);
						this.consume();
					}
					}
					}
					this.state = 168;
					this._errHandler.sync(this);
					_la = this._input.LA(1);
				}
				}
				}
				this.state = 173;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
			}
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public declGlobal(): DeclGlobalContext {
		let _localctx: DeclGlobalContext = new DeclGlobalContext(this._ctx, this.state);
		this.enterRule(_localctx, 10, DIVParser.RULE_declGlobal);
		let _la: number;
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 174;
			this.match(DIVParser.GLOBAL);
			this.state = 178;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			while (_la === DIVParser.SEMICOLON) {
				{
				{
				this.state = 175;
				this.match(DIVParser.SEMICOLON);
				}
				}
				this.state = 180;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
			}
			this.state = 184;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			while ((((_la) & ~0x1F) === 0 && ((1 << _la) & ((1 << DIVParser.STRUCT) | (1 << DIVParser.STRING) | (1 << DIVParser.BYTE) | (1 << DIVParser.WORD) | (1 << DIVParser.INT))) !== 0) || _la === DIVParser.POINTER || _la === DIVParser.Identifier) {
				{
				{
				this.state = 181;
				this.declVariable();
				}
				}
				this.state = 186;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
			}
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public declLocal(): DeclLocalContext {
		let _localctx: DeclLocalContext = new DeclLocalContext(this._ctx, this.state);
		this.enterRule(_localctx, 12, DIVParser.RULE_declLocal);
		let _la: number;
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 187;
			this.match(DIVParser.LOCAL);
			this.state = 191;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			while (_la === DIVParser.SEMICOLON) {
				{
				{
				this.state = 188;
				this.match(DIVParser.SEMICOLON);
				}
				}
				this.state = 193;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
			}
			this.state = 197;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			while ((((_la) & ~0x1F) === 0 && ((1 << _la) & ((1 << DIVParser.STRUCT) | (1 << DIVParser.STRING) | (1 << DIVParser.BYTE) | (1 << DIVParser.WORD) | (1 << DIVParser.INT))) !== 0) || _la === DIVParser.POINTER || _la === DIVParser.Identifier) {
				{
				{
				this.state = 194;
				this.declVariable();
				}
				}
				this.state = 199;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
			}
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public declPrivate(): DeclPrivateContext {
		let _localctx: DeclPrivateContext = new DeclPrivateContext(this._ctx, this.state);
		this.enterRule(_localctx, 14, DIVParser.RULE_declPrivate);
		let _la: number;
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 200;
			this.match(DIVParser.PRIVATE);
			this.state = 204;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			while (_la === DIVParser.SEMICOLON) {
				{
				{
				this.state = 201;
				this.match(DIVParser.SEMICOLON);
				}
				}
				this.state = 206;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
			}
			this.state = 210;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			while ((((_la) & ~0x1F) === 0 && ((1 << _la) & ((1 << DIVParser.STRUCT) | (1 << DIVParser.STRING) | (1 << DIVParser.BYTE) | (1 << DIVParser.WORD) | (1 << DIVParser.INT))) !== 0) || _la === DIVParser.POINTER || _la === DIVParser.Identifier) {
				{
				{
				this.state = 207;
				this.declVariable();
				}
				}
				this.state = 212;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
			}
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public declVariable(): DeclVariableContext {
		let _localctx: DeclVariableContext = new DeclVariableContext(this._ctx, this.state);
		this.enterRule(_localctx, 16, DIVParser.RULE_declVariable);
		let _la: number;
		try {
			this.state = 276;
			this._errHandler.sync(this);
			switch (this._input.LA(1)) {
			case DIVParser.STRUCT:
				this.enterOuterAlt(_localctx, 1);
				{
				this.state = 213;
				this.match(DIVParser.STRUCT);
				this.state = 232;
				this._errHandler.sync(this);
				switch (this._input.LA(1)) {
				case DIVParser.POINTER:
					{
					this.state = 214;
					this.pointerDecl();
					this.state = 215;
					this.sc();
					}
					break;
				case DIVParser.Identifier:
					{
					this.state = 217;
					this.match(DIVParser.Identifier);
					this.state = 219;
					this._errHandler.sync(this);
					_la = this._input.LA(1);
					if (_la === DIVParser.LBRACKET) {
						{
						this.state = 218;
						this.arraySizeDecl();
						}
					}

					this.state = 221;
					this.structBody();
					this.state = 224;
					this._errHandler.sync(this);
					_la = this._input.LA(1);
					if (_la === DIVParser.ASSIGN) {
						{
						this.state = 222;
						this.match(DIVParser.ASSIGN);
						this.state = 223;
						this.initArray();
						}
					}

					this.state = 229;
					this._errHandler.sync(this);
					_la = this._input.LA(1);
					while (_la === DIVParser.SEMICOLON) {
						{
						{
						this.state = 226;
						this.match(DIVParser.SEMICOLON);
						}
						}
						this.state = 231;
						this._errHandler.sync(this);
						_la = this._input.LA(1);
					}
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				}
				break;
			case DIVParser.STRING:
				this.enterOuterAlt(_localctx, 2);
				{
				this.state = 234;
				this.match(DIVParser.STRING);
				this.state = 235;
				this.stringVarDecl();
				this.state = 240;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
				while (_la === DIVParser.COMMA) {
					{
					{
					this.state = 236;
					this.match(DIVParser.COMMA);
					this.state = 237;
					this.stringVarDecl();
					}
					}
					this.state = 242;
					this._errHandler.sync(this);
					_la = this._input.LA(1);
				}
				this.state = 243;
				this.sc();
				}
				break;
			case DIVParser.BYTE:
				this.enterOuterAlt(_localctx, 3);
				{
				this.state = 245;
				this.match(DIVParser.BYTE);
				this.state = 246;
				this.varDecl();
				this.state = 251;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
				while (_la === DIVParser.COMMA) {
					{
					{
					this.state = 247;
					this.match(DIVParser.COMMA);
					this.state = 248;
					this.varDecl();
					}
					}
					this.state = 253;
					this._errHandler.sync(this);
					_la = this._input.LA(1);
				}
				this.state = 254;
				this.sc();
				}
				break;
			case DIVParser.WORD:
				this.enterOuterAlt(_localctx, 4);
				{
				this.state = 256;
				this.match(DIVParser.WORD);
				this.state = 257;
				this.varDecl();
				this.state = 262;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
				while (_la === DIVParser.COMMA) {
					{
					{
					this.state = 258;
					this.match(DIVParser.COMMA);
					this.state = 259;
					this.varDecl();
					}
					}
					this.state = 264;
					this._errHandler.sync(this);
					_la = this._input.LA(1);
				}
				this.state = 265;
				this.sc();
				}
				break;
			case DIVParser.INT:
			case DIVParser.POINTER:
			case DIVParser.Identifier:
				this.enterOuterAlt(_localctx, 5);
				{
				this.state = 268;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
				if (_la === DIVParser.INT) {
					{
					this.state = 267;
					this.match(DIVParser.INT);
					}
				}
